# Std3D

./: .gitignore  AABox.cpp  AABox.h  CMakeLists.txt  FrustumG.cpp  FrustumG.h  Main.cpp  Matrix.cpp  Matrix.hpp  Plane.cpp  Plane.h  README.md  Render.cpp  Render.h  Vec3.cpp  Vec3.h  View.cpp  View.hpp
